--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -5,9 +5,9 @@
             <input class="login-input top" type="text" placeholder="Nome de usuário">
             <input class="login-input bottom" type="password" placeholder="Senha">
         </div>
-        <button class="login-button" type="submit">Login</button>
+        <button class="login-button" type="submit">Autenticar</button>
         <div class="error-texts">
         </div>
-        <p class="captive-text">Não possui uma conta? <a class="captive-link">Cadastre-se</a></p>
+        <p class="captive-text">Não possui uma conta? <a class="captive-link" [routerLink]="['']">Cadastre-se</a></p>
     </form>
 </div>
