--- a/frontend/src/app/components/table/table.component.html
+++ b/frontend/src/app/components/table/table.component.html
@@ -1,4 +1,4 @@
-<mat-table [dataSource]="products$">
+<mat-table [dataSource]="this.productsService.products$">
   <!-- Coluna Nome do Produto -->
   <ng-container matColumnDef="productName">
     <mat-header-cell *matHeaderCellDef> Produto </mat-header-cell>
@@ -23,11 +23,12 @@
     <mat-cell *matCellDef="let product"> {{ product.vendorName }} </mat-cell>
   </ng-container>
 
-  <!-- Coluna Registro do Fornecedor -->
-  <ng-container matColumnDef="vendorRegistration">
-    <mat-header-cell *matHeaderCellDef> CNPJ </mat-header-cell>
-    <mat-cell *matCellDef="let product"> {{ product.vendorRegistration }} </mat-cell>
-  </ng-container>
+  <div id="hide">
+    <ng-container matColumnDef="vendorRegistration">
+      <mat-header-cell *matHeaderCellDef> CNPJ </mat-header-cell>
+      <mat-cell *matCellDef="let product"> {{ product.vendorRegistration }} </mat-cell>
+    </ng-container>
+  </div>
 
   <!-- Coluna de ações com o botão -->
   <ng-container matColumnDef="actions">
@@ -48,4 +49,5 @@
   <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
   <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
 </mat-table>
+<p *ngIf="!(productsService.products$ | async)?.length">Nenhum produto cadastrado.</p>
 
