--- a/frontend/src/app/pages/dashboard/dashboard.component.css
+++ b/frontend/src/app/pages/dashboard/dashboard.component.css
@@ -22,4 +22,19 @@
   margin: 0 auto;
   margin-top: 5em;
   width: 85%;
+  padding: 1em;
+  background-color: #fff;
+  border-radius: 1em;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+}
+
+.table-spot button{
+  width: 150px;
+  align-self: flex-end;
+}
+
+p{
+  text-align: center;
 }
