--- a/frontend/src/app/pages/dashboard/dashboard.component.html
+++ b/frontend/src/app/pages/dashboard/dashboard.component.html
@@ -9,6 +9,7 @@
   </mat-toolbar>
 
   <div class="table-spot">
+    <button class="registerBtn" mat-raised-button color="primary" (click)="openDialog()">+ Cadastrar</button>
     <app-table></app-table>
   </div>
 </div>
